sign in 및 util 정리
1.  중복 이메일 확인 api 추가
2.  sign in api 추가
3. 서버단 자체 error와 서버에러 구분을 위한 custom error 객체생성 (error_util)
4.  uitl 분리
