# server/router/user_api_router.js
@@ -1,14 +1,14 @@
 const express = require('express');
 const router = express.Router();
 let userApi = require('../api/user_api');
-let {wrap} = require('../api/common_util');
+let {wrap, CustomError} = require('../util/error_util');
+let commonUtil = require('../util/common_util');
 
 router.post('/login', wrap(async function(req, res){
-    console.log(req.body);
     let email = req.body.email;
     let pwd = req.body.pwd;
-    if(email == null || pwd == null){
-        throw Error(`No Parameter (email : ${email} / pwd : ${pwd} )`);
+    if(commonUtil.isEmpty(email)|| commonUtil.isEmpty(pwd)){
+        throw new CustomError(`No Parameter (email : ${email} / pwd : ${pwd} )`);
     }
     let result = await userApi.login(email, pwd);
     res.status(200).json(result);
@@ -16,26 +16,33 @@ router.post('/login', wrap(async function(req, res){
 
 router.get('/get_info', wrap(async function(req,res){
     let userId = req.query.id;
-    if(userId == null) {
-        throw Error(`No Parameter (userId : ${userId})`);
+    if(commonUtil.isEmpty(userId)) {
+        throw new CustomError(`No Parameter (userId : ${userId})`);
     }
     const result = await userApi.getUserInfo(userId);
     res.status(200).json(result);
 }));
 
+router.get('/is_duplicate_email', wrap(async function(req, res){
+    let email = req.query.email;
+    if(commonUtil.isEmpty(email)) {
+        throw new CustomError(`No Parameter (email : ${email})`);
+    }
+    let duplicated = await userApi.isDuplicateEmail(email);
+    res.status(200).json(duplicated);
+}));
 
-// router.post('/sign_in', function(req, res){
-//     let email = req.body.email;
-//     let pwd = req.body.pwd;
-//     let name = req.body.name;
-//     let phone = req.body.phone;
-//     let birth = req.body.birth;
-
-//     if(!loginApi.validUserInfo(email,pwd, name, phone, birth)){
-//         res.status(400).send("Invalid Form");
-//         return; 
-//     }
-    
-// });
+router.post('/sign_in', wrap(async function(req, res){
+    let userForm = req.body;
+    if(!userApi.validUserInfo(userForm)){
+        throw new CustomError(`Invalid Form`);
+    }
+    let duplicated = await userApi.isDuplicateEmail(userForm.email);
+    if(duplicated){
+        throw new CustomError(`Duplicate Email address`);
+    }
+    let id = await userApi.insertUserInfo(userForm);
+    res.status(200).json(id);
+}));
 
 module.exports = router;
